--- a/admin_site/requirements.txt
+++ b/admin_site/requirements.txt
@@ -1,25 +1,25 @@
-Django==4.2.17
-crispy-bootstrap5==0.6
-django-crispy-forms==2.1.0
+Django==5.1.4
+crispy-bootstrap5==2024.10
+django-crispy-forms==2.3
 django-extensions==3.2.3
 django-markdownx==4.0.7
-django-ninja==0.22.2
-django-otp==1.1.6
-django-storages==1.12.3
-django-two-factor-auth[phonenumberslite]==1.14.0
-django-xmlrpc==0.1.8
-google-api-core==2.8.2           # If using Google Cloud
-google-auth==2.9.1               # If using Google Cloud
-google-cloud-core==2.3.1         # If using Google Cloud
-google-cloud-storage==2.4.0      # If using Google Cloud
-google-crc32c==1.3.0             # If using Google Cloud
-google-resumable-media==2.3.3    # If using Google Cloud
-googleapis-common-protos==1.56.4 # If using Google Cloud
-gunicorn==22.0.0
-psycopg-binary==3.1.18           # Used in the example docker-compose.yml
-psycopg==3.1.18                  # Used in the example docker-compose.yml
-python-dateutil==2.8.2           # Required by django-xmlrpc
-requests==2.32.2
-whitenoise==6.6.0                # If you don't have a web server in front to serve static files
+django-ninja==1.3
+django-otp==1.5.4
+django-storages==1.14.4
+django-two-factor-auth[phonenumberslite]==1.17.0
+django-modern-rpc==1.1.0
+google-api-core==2.24.0           # If using Google Cloud
+google-auth==2.37.0               # If using Google Cloud
+google-cloud-core==2.4.1         # If using Google Cloud
+google-cloud-storage==2.19.0      # If using Google Cloud
+google-crc32c==1.6.0             # If using Google Cloud
+google-resumable-media==2.7.2    # If using Google Cloud
+googleapis-common-protos==1.66.0 # If using Google Cloud
+gunicorn==23.0.0
+psycopg-binary==3.2.3           # Used in the example docker-compose.yml
+psycopg==3.2.3                  # Used in the example docker-compose.yml
+python-dateutil==2.9.0-post0           # Required by django-xmlrpc
+requests==2.32.3
+whitenoise==6.8.2                # If you don't have a web server in front to serve static files
 PyYAML==6.0.2
 markdown==3.7
